# automl_cplusplus

./: .gitignore  README.md  compile_limbo.sh  run_limbo.sh  run_test.sh  run_test2.sh  test_set1.csv  test_set2.csv  training_set1.csv  workflow_in_nutshell.ipynb
limbo/: .gitignore  compile_limbo.sh  installation.sh
limbo/exp/myExp/: CMakeLists.txt  MoveCounter.cpp  MoveCounter.hpp  found_params.txt  main.cpp  main_test.cpp  wscript
limbo/exp/myExp2/: main.cpp  wscript
limbo/exp/myExp2_cmake/: CMakeLists.txt  main.cpp
limbo/exp/myExp2_move_opt/: CMakeLists.txt  MoveCounter.cpp  MoveCounter.hpp  main.cpp
limbo/nlopt-2.4.2/: Makefile  config.status  libnlopt_cxx.la  libtool
limbo/nlopt-2.4.2/.libs/: libnlopt_cxx.lai  libnlopt_cxx.so.0  libnlopt_cxx.so.0.8.2
limbo/nlopt-2.4.2/api/: Makefile
limbo/nlopt-2.4.2/api/.deps/: deprecated.Plo  f77api.Plo  general.Plo  optimize.Plo  options.Plo
limbo/nlopt-2.4.2/auglag/: Makefile
limbo/nlopt-2.4.2/auglag/.deps/: auglag.Plo
limbo/nlopt-2.4.2/bobyqa/: Makefile
limbo/nlopt-2.4.2/bobyqa/.deps/: bobyqa.Plo
limbo/nlopt-2.4.2/cdirect/: Makefile
limbo/nlopt-2.4.2/cdirect/.deps/: cdirect.Plo  hybrid.Plo
limbo/nlopt-2.4.2/cobyla/: Makefile
limbo/nlopt-2.4.2/cobyla/.deps/: cobyla.Plo
limbo/nlopt-2.4.2/crs/: Makefile
limbo/nlopt-2.4.2/crs/.deps/: crs.Plo
limbo/nlopt-2.4.2/direct/: Makefile
limbo/nlopt-2.4.2/direct/.deps/: DIRect.Plo  DIRserial.Plo  DIRsubrout.Plo  direct_wrap.Plo
limbo/nlopt-2.4.2/esch/: Makefile
limbo/nlopt-2.4.2/esch/.deps/: esch.Plo
limbo/nlopt-2.4.2/isres/: Makefile
limbo/nlopt-2.4.2/isres/.deps/: isres.Plo
limbo/nlopt-2.4.2/luksan/: Makefile
limbo/nlopt-2.4.2/luksan/.deps/: mssubs.Plo  plip.Plo  plis.Plo  pnet.Plo  pssubs.Plo
limbo/nlopt-2.4.2/mlsl/: Makefile
limbo/nlopt-2.4.2/mlsl/.deps/: mlsl.Plo
limbo/nlopt-2.4.2/mma/: Makefile
limbo/nlopt-2.4.2/mma/.deps/: ccsa_quadratic.Plo  mma.Plo
limbo/nlopt-2.4.2/neldermead/: Makefile
limbo/nlopt-2.4.2/neldermead/.deps/: nldrmd.Plo  sbplx.Plo
limbo/nlopt-2.4.2/newuoa/: Makefile
limbo/nlopt-2.4.2/newuoa/.deps/: newuoa.Plo
limbo/nlopt-2.4.2/octave/: Makefile  dummy
limbo/nlopt-2.4.2/praxis/: Makefile
limbo/nlopt-2.4.2/slsqp/: Makefile
limbo/nlopt-2.4.2/stogo/: Makefile  linalg.lo  local.lo  stogo.lo
limbo/nlopt-2.4.2/swig/: Makefile
limbo/nlopt-2.4.2/test/: Makefile  testopt
limbo/nlopt-2.4.2/util/: Makefile  redblack_test
nlopt/build_test/: CMakeCache.txt
nlopt/test/: example-nlopt
(+21 files in other folders)
